//
//  AccessibilityIdentifiers.swift
//  ImageFeed
//
//  Created by Илья Ануфриев on 13.04.2025.
//

import Foundation

enum AccessibilityIdentifiers {
    static let webView = "UnsplashWebView"
    static let logoutButton = "logout button"
    static let nameLabel = "Name LastName"
    static let loginNameLabel = "@username"
    static let alert = "Bye bye!"
    static let firstAction = "Yes"
}
