...
                                    <constraint firstAttribute="height" constant="60" id="Lwd-9N-89Q"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L9n-WC-GFh">
                                <rect key="frame" x="16" y="680" width="361" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="U9w-en-eYm"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <color key="tintColor" name="YP Black"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                    <color key="textColor" name="YP White"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lZ3-hS-HeD" userLabel="Like Button">
                                                    <rect key="frame" x="333" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="Like button"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="44" id="2Ay-hy-NdU"/>
                                                        <constraint firstAttribute="height" constant="44" id="LBy-M9-ibH"/>
                                                    </constraints>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="Active"/>
...
                                <connections>
                                    <outlet property="delegate" destination="K5W-9N-i6k" id="hMs-Vv-RnB"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zWx-ae-Dj0" userLabel="Back Button">
                                <rect key="frame" x="8" y="4" width="44" height="44"/>
                                <accessibility key="accessibilityConfiguration" label="nav back button white"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="44" id="g7Y-uB-Y3V"/>
                                    <constraint firstAttribute="height" constant="44" id="i2V-eF-TaS"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="back_button"/>
...
